Ticket #29027: Fix flexbox issue on Safari causing contributions sidebar to be misaligned

--- a/website/static/website/css/modules/pages/case-study/_cs-contents.scss
+++ b/website/static/website/css/modules/pages/case-study/_cs-contents.scss
@@ -59,28 +59,31 @@
 }
 
 .cs-contributions--content {
-  align-items: center;
-  display: flex;
-  flex-wrap: wrap;
+
+  @media (max-width: $breakpoint-tablet -1px) {
+    align-items: center;
+    display: flex;
+    flex-wrap: wrap;
+  }
 }
 
 .cs-contributions--media {
-  flex: 0 0 auto;
 
   video,img {
     width: 100%;
   }
 
-  @media (max-width: $breakpoint-tablet) {
+  @media (max-width: $breakpoint-tablet -1px) {
+    flex: 0 0 auto;
     order: 2;
     width: 100%;
   }
 }
 
 .cs-contributions--contributions {
-  flex: 0 0 auto;
 
-  @media (max-width: $breakpoint-tablet) {
+  @media (max-width: $breakpoint-tablet - 1px) {
+    flex: 0 0 auto;    
     margin-bottom: calc(170 / 18 * 1rem);
     width: 100%;
   }
